Fixed Spacing, Centered Text, Improved Footer

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
 body{line-height:1; font-family: arial;}
 h1{font-size: 25px; color: #ffffff;padding: 8px;}h2{font-size: 21px;}h3{font-size: 18px;}h4{font-size: 16px;}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}
-ins{background-color:#ff9;color:#000;text-decoration:none}
-mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
-del{text-decoration:line-through}
-abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
-table{border-collapse:collapse;border-spacing:0}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
-input,select{vertical-align:middle}
+
+header {
+	width: 100%;
+    background: #863493;
+    padding-top: 20px;
+	padding-bottom: 20px;
+	font-weight: bolder;
+	text-align: center;
+}
 
 body,html {
 	display: flex;
@@ -19,15 +21,6 @@ body,html {
 	background-color: #FFF;
 	margin:0; /*gets rid of white space around body*/
 }
-
-.footer {
-	background: #863493;
-	text-align: center;
-	font-weight: bolder;
-	color: #ffffff;
-	height: 60px;
-}
-
 
 .button {
   width: 35%;
@@ -50,23 +43,13 @@ body,html {
 	min-height: 100%;
 }
 
-header {
-	width: 100%;
-    background: #863493;
-    padding: 20px 30px;
-    margin: auto;
+footer {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 20px;
+	background: #863493;
+	text-align: right;
 	font-weight: bolder;
-	text-align: center;
-}
-
-main {
-	margin: 20px;
-	width: 100%;
-}
-
-body > section {
-    margin: auto;
-    padding: 30px 10px;
-    border-bottom: 1px solid #999;
-    color: #333;
+	color: #ffffff;
+	height: 60px;
 }
